# tc-mode-manager

./: Makefile.am  configure.ac  defaultmode.xml
include/: DBusMsgDef.h  ModeDBusManager.h  ModeManager.h  ModeXMLParser.h
src/: DBusMsgDefNames.c  ModeDBusManager.c  ModeManager.cpp  ModeXMLParser.c  main.c
